✨  Endpoint configuration